workspace/log/build_2024-12-02_11-44-04/template_drone_control/stdout_stderr.log
[35m[1mScanning dependencies of target swaarm_control[0m
[ 50%] Built target template_drone_control_node
[ 75%] [32mBuilding CXX object CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o[0m
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In constructor ‘MultiDroneControl::MultiDroneControl()’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:46:13: error: ‘current_positions_’ was not declared in this scope; did you mean ‘current_states_’?
   46 |             current_positions_[ns] = geometry_msgs::msg::PoseStamped();
      |             ^~~~~~~~~~~~~~~~~~
      |             current_states_
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:47:13: error: ‘last_pose_time_’ was not declared in this scope
   47 |             last_pose_time_[ns] = rclcpp::Time(0, 0, this->get_clock()->get_clock_type());
      |             ^~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/swaarm_control.dir/build.make:63: CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/swaarm_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
